@@ -9433,8 +9433,6 @@ name|this
 operator|.
 name|getHostAddress
 argument_list|()
-argument_list|,
-name|conf
 argument_list|)
 expr_stmt|;
 block|}
