@@ -4131,8 +4131,6 @@ name|getRemoteAddr
 argument_list|(
 name|request
 argument_list|)
-argument_list|,
-name|conf
 argument_list|)
 expr_stmt|;
 block|}
